<resources>
    <string name="app_name">Test Chat</string>
    <string name="chat_room">Make or Join a Room</string>
    <string name="version">Version 1.0</string>
    <string name="user_name">Username: </string>
    <string name="room_name">Room Name: </string>
    <string name="registration_home">Account Registration</string>
    <string name="server_url_local">http://10.146.11.124:4000</string>
    <string name="server_url_tethered">http://192.168.34.223:4000</string>
</resources>