<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPages.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/gradient_background_general"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_login"></LinearLayout>

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="62dp"
                    android:layout_marginEnd="50dp"
                    android:fontFamily="@font/poppins_bold"
                    android:maxLines="1"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/dark_green"
                    android:textSize="48sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/profileCardView"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="150dp"
                    app:cardElevation="5dp"
                    app:cardMaxElevation="5dp"
                    app:layout_constraintEnd_toEndOf="@+id/tv_title"
                    app:layout_constraintStart_toStartOf="@+id/tv_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title">

                    <ImageView
                        android:id="@+id/imgview_ava"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/avatar_selected"
                        android:scaleType="centerCrop"
                        app:layout_constraintStart_toStartOf="@+id/profile_background"
                        app:srcCompat="@drawable/ic_outline_person_24" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/body_edit_profile_"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="5dp"
                    app:cardMaxElevation="3dp"
                    app:layout_constraintBottom_toBottomOf="@+id/profileCardView"
                    app:layout_constraintEnd_toEndOf="@+id/profileCardView"
                    app:layout_constraintHorizontal_bias="0.95"
                    app:layout_constraintStart_toStartOf="@+id/profileCardView"
                    app:layout_constraintTop_toTopOf="@+id/profileCardView"
                    app:layout_constraintVertical_bias="0.90">

                    <com.innov.testchat.ScaleImageButton
                        android:id="@+id/btn_change_ava"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ic_outline_image_24"
                        android:elevation="8dp"
                        android:onClick="onClick"
                        android:padding="20dp"
                        app:iconTint="@color/white" />

                </androidx.cardview.widget.CardView>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tv_layout_name"
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="50dp"
                    android:gravity="bottom"
                    android:textColorHint="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profileCardView">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tv_input_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_edittext"
                        android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM1234567890!@#$%^*()-_."
                        android:hint="@string/user_name"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/set_error_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_red"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@+id/tv_layout_name"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="@+id/tv_layout_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_layout_name" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tv_layout_room"
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:layout_marginTop="8dp"
                    android:gravity="bottom"
                    android:textColorHint="@android:color/black"
                    app:layout_constraintEnd_toEndOf="@+id/tv_layout_name"
                    app:layout_constraintStart_toStartOf="@+id/tv_layout_name"
                    app:layout_constraintTop_toBottomOf="@+id/set_error_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tv_input_room"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_edittext"
                        android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM1234567890!@#$%^*()-_."
                        android:hint="@string/room_name"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/set_error_room"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_red"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@+id/tv_layout_room"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="@+id/tv_layout_room"
                    app:layout_constraintTop_toBottomOf="@+id/tv_layout_room" />

                <com.innov.testchat.ScaleButton
                    android:id="@+id/button_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_background"
                    android:onClick="onClick"
                    android:text="@string/chat_room"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toEndOf="@+id/tv_layout_room"
                    app:layout_constraintStart_toStartOf="@+id/tv_layout_room"
                    app:layout_constraintTop_toBottomOf="@+id/set_error_room" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/version"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/linearLayout4" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>